Fix invalid man docs command

--- a/tmux/index.html
+++ b/tmux/index.html
@@ -93,7 +93,7 @@
 <p>You can enter copy mode (which allows you to scroll) by running <code>^b [</code>. There you can scroll up and down (vim keybindings even work!).</p>
 <h2 id="sources">Sources</h2>
 <p>You can contribute to this document <a href="https://github.com/dylngg/living/tmux">here</a> by opening a merge request or an issue. Any and all contributions, as well as feedback, is welcome.</p>
-<p><a href="http://man.openbsd.org/OpenBSD-current/man1/tmux.1">http://man.openbsd.org/OpenBSD-current/man1/tmux.1</a> (<code>man tmux 1</code>) <a href="https://leanpub.com/the-tao-of-tmux/read">https://leanpub.com/the-tao-of-tmux/read</a></p>
+<p><a href="http://man.openbsd.org/OpenBSD-current/man1/tmux.1">http://man.openbsd.org/OpenBSD-current/man1/tmux.1</a> (<code>man 1 tmux</code>) <a href="https://leanpub.com/the-tao-of-tmux/read">https://leanpub.com/the-tao-of-tmux/read</a></p>
             </article>
             <a href="#">goto top;</a>
         </section>
