--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </section>
             <article>
 
-<h2 id="guides">Guides</h2>
+<h2 id="guides">References</h2>
 <p><a href="https://dylngg.github.io/living/tmux">tmux</a></p>
             </article>
         </section>
