Fix page headers and broken contributing links

--- a/tmux/index.html
+++ b/tmux/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>tmux</title>
+        <title>tmux: Dylan's Living Docs</title>
         <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
         <link rel="stylesheet" href="../resources/css/normalize.css">
         <link rel="stylesheet" href="../resources/css/bare-simplicity.css">
@@ -92,7 +92,7 @@
 <h2 id="scrolling-and-copying">Scrolling and Copying</h2>
 <p>You can enter copy mode (which allows you to scroll) by running <code>^b [</code>. There you can scroll up and down (vim keybindings even work!).</p>
 <h2 id="sources">Sources</h2>
-<p>You can contribute to this document <a href="https://github.com/dylngg/living/tmux">here</a> by opening a merge request or an issue. Any and all contributions, as well as feedback, is welcome.</p>
+<p>You can contribute to this document <a href="https://github.com/dylngg/living/tree/master/tmux">here</a> by opening a merge request or an issue. Any and all contributions, as well as feedback, is welcome.</p>
 <p><a href="http://man.openbsd.org/OpenBSD-current/man1/tmux.1">http://man.openbsd.org/OpenBSD-current/man1/tmux.1</a> (<code>man 1 tmux</code>) <a href="https://leanpub.com/the-tao-of-tmux/read">https://leanpub.com/the-tao-of-tmux/read</a></p>
             </article>
             <a href="#">goto top;</a>
