Document the '^b ,' tmux binding, which renames a window

--- a/tmux/index.html
+++ b/tmux/index.html
@@ -13,7 +13,7 @@
             <section class="intro">
                 <h1>tmux</h1>
                 <p class="desc">Documents various things with tmux that I can't always remember and features I use/should use. Intended as a reference, not a guide.</p>
-                <span class="date">May 18th, 2019</span>
+                <span class="date">December 21st, 2019</span>
             </section>
             <article>
 
@@ -40,6 +40,10 @@
 <tr class="odd">
 <td><code>c</code></td>
 <td>Opens a new window to the right (and switches to it). You can also use <code>:new-window</code></td>
+</tr>
+<tr class="even">
+<td><code>,</code></td>
+<td>Renames the current window. You can also use <code>:rename-window</code></td>
 </tr>
 </tbody>
 </table>
