--- a/tools/header.html
+++ b/tools/header.html
@@ -11,7 +11,7 @@
     <body>
         <section class="main">
             <section class="intro">
-                <h1>$title</h1>
+                <h1>$shorttitle</h1>
                 <p class="desc">$desc</p>
                 <span class="date">$date</span>
             </section>
