Point a link to the living docs homepage in each document

--- a/tools/header.html
+++ b/tools/header.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="../resources/css/extra.css">
     </head>
     <body>
+        <a href="../index.html">&lt; All Living Docs</a>
         <section class="main">
             <section class="intro">
                 <h1>$shorttitle</h1>
