Make doc links on hompeage be relative

--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
                 <p class="bio">By <a href="https://dylngg.github.io">Dylan Gardner</a></p>
             </section>
             <article>
-
-<h2 id="guides">References</h2>
-<p><a href="https://dylngg.github.io/living/tmux">tmux</a></p>
+                <h2 id="guides">References</h2>
+                <p><a href="tmux/index.html">tmux</a></p>
             </article>
         </section>
     </body>
