--- a/tools/header.html
+++ b/tools/header.html
@@ -1,11 +1,14 @@
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>$title</title>
-        <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
-        <link rel="stylesheet" href="../resources/css/normalize.css">
-        <link rel="stylesheet" href="../resources/css/bare-simplicity.css">
+
+        <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600" rel="stylesheet">
+
+        <link rel="stylesheet" href="/css/normalize.min.css">
+        <link rel="stylesheet" href="/css/bare-simplicity.css">
         <link rel="stylesheet" href="../resources/css/extra.css">
     </head>
     <body>
